@@ -4,8 +4,8 @@
 
 <div class="content"><ul>
 	<li>If you are new to linux and Xubuntu, you probably wonder how to find all the drivers and programs you will need. Please do not do that. The drivers needed for your system are being installed as you read this.</li>
-	<li>After the installation completes, take a few minutes, hours, or even days, to try out the new software. We think you will be amazed at the few things you need to add.</li>
-	<li>If you find you want something else, please check the <em>Ubuntu Software Center</em> out. It is much easier than searching the internet.</li>
+	<li>After the installation completes, take a few minutes, hours, or even days to try out the new software. We think you will be amazed at the few things you need to add.</li>
+	<li>If you find yourself wanting something else, please check the <em>Ubuntu Software Center</em> out. It is much easier than searching the internet.</li>
 </ul></div>
 
 </div>
