@@ -4,10 +4,10 @@
 
 <div class="content"><ul>
 	<li><em>Abiword</em> is a word processor, which can read almost all known document formats. You will have access to any fonts installed in your system and editing documents is a breeze.</li>
-	<li><em>Gnumeric</em> is a spreadsheet program with emphasis on accuracy. It can also be used to merge mathematical data into Abiword documents.</li>
+	<li><em>Gnumeric</em> is a spreadsheet program with an emphasis on accuracy. It can also be used to merge mathematical data into Abiword documents.</li>
 	<li>While Abiword and Gnumeric are considered lightweight, they provide almost all of the functions of the OpenOffice suite.</li>
 </ul>
-<p class="special">For power users, the OpenOffice.org suite is available in just a few clicks  – just install it from the Ubuntu repositories.</p></div>
+<p class="special">For power users, the OpenOffice.org suite is available in just a few clicks  – just install it from the Ubuntu Software Center.</p></div>
 
 </div>
 
