@@ -6,7 +6,7 @@
 	<li>Xubuntu uses the <em>Xfce desktop environment</em>. This allows the developers to bring you a system which is sleek and useful.</li>
 	<li>Xfce is a collection of programs that together provide a full-featured desktop environment.</li>
 	<li>Xfce is also a development platform providing several libraries, that help programmers create applications that fit in well with the desktop environment.</li>
-	<li>To learn more about Xfce, look in <em>Applications &rarr; About Xfce &rarr; Info</em> or the <a href="http://xfce.org/">Xfce website</a>.</li>
+	<li>To learn more about Xfce, look in <em>Applications &rarr; About Xfce &rarr; Info</em> or on the <a href="http://xfce.org/">Xfce website</a>.</li>
 </ul></div>
 
 </div>
